Testing of github workflows