@@ -1,4 +1,4 @@
 #!/usr/bin/env sh
 
-/usr/bin/java -Xmx256m -Xss512k -XX:PermSize=100m \
+/usr/bin/java -Xmx256m -Xss512k -XX:-UseContainerSupport \
               -jar /apps/app.jar
